# speech2text

./: .gitignore  CLAUDE.md  README.md  index.html  latest.json  overlay.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
manifests/o/ozas/speech2text/1.1.0/: ozas.speech2text.installer.yaml  ozas.speech2text.locale.en-US.yaml  ozas.speech2text.yaml
manifests/o/ozas/speech2text/1.1.1/: ozas.speech2text.installer.yaml  ozas.speech2text.locale.en-US.yaml  ozas.speech2text.yaml
src/: app.css  app.js  app.jsx  index.html  main.jsx  overlay.css  overlay.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: settings.jsx  visualizer.jsx
