[package]
name = "speech2text"
version = "0.1.0"
description = "Speech to text via Groq Whisper"
authors = ["ozas"]
edition = "2021"

[lib]
name = "speech2text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json"] }
arboard = "3"
enigo = "0.3"
base64 = "0.22"
